# practice

./: Dockerfile  README.md  compose.yaml  index.html  pyproject.toml  questions.json  server.py  survey-component.js
mockpatch/: __init__.py  __main__.py  models.py  server.py
static/: index.htm  index.html
static/js/: element.js
